--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
+h1 {
+    text-align: center;
+}
+body {
+    text-align: justify;
+}
+p {
+    text-align: justify;
+}
 .ubuntu-light {
     font-family: "Ubuntu", sans-serif;
     font-weight: 300;
